added read tier prices and various bug fixes regarding wrong mapped products and more