@@ -17,6 +17,8 @@ UTILS_JAR_NAME=ecommerce-utils-1.0.0-SNAPSHOT.jar
 UTILS_TARGET_DIR=app/ecommerce-utils/target/
 UTILS_JAR=${DIST_DIR}/${UTILS_JAR_NAME}
 
+# disable it if not JAVA 9 or higher
+JAVA_OPTIONS="--add-modules java.xml.bind"
 
 function printInfo {
   echo ""
@@ -47,19 +49,23 @@ echo ""
 case "$1" in
   create-led-brands)
     printInfo "Create brands for illuminazione-a-led brands ..."
-    java -jar ${UTILS_JAR} --action=create-led-brands --config=${CONFIG_FILE}
+    java ${JAVA_OPTIONS} -jar ${UTILS_JAR} --action=create-led-brands --config=${CONFIG_FILE}
     ;;
   generate-merged-product-ids)
     printInfo "Generate merged product ids mapping (both in source system) ..."
-    java -jar ${UTILS_JAR} --action=products-mapping --config=${CONFIG_FILE}
+    java ${JAVA_OPTIONS} -jar ${UTILS_JAR} --action=products-mapping --config=${CONFIG_FILE}
     ;;
   migrate-products)
     printInfo "Migrate product ..."
-    java -jar ${UTILS_JAR} --action=products-migrate --config=${CONFIG_FILE}
+    java ${JAVA_OPTIONS} -jar ${UTILS_JAR} --action=products-migrate --config=${CONFIG_FILE}
     ;;
   upload-images)
     printInfo "Upload images to destination system ..."
-    java -jar ${UTILS_JAR} --action=products-image-migrate --config=${CONFIG_FILE}
+    java ${JAVA_OPTIONS} -jar ${UTILS_JAR} --action=products-image-migrate --config=${CONFIG_FILE}
+    ;;
+  migrate-product-tier-prices)
+    printInfo "Migrate main product tier prices ..."
+    java ${JAVA_OPTIONS} -jar ${UTILS_JAR} --action=products-tier-prices-migrate --config=${CONFIG_FILE}
     ;;
   *)
     echo ""
@@ -68,7 +74,7 @@ case "$1" in
     echo " # ########################################################################"
     echo " # Prepare mapping files before products migration:"
     echo ""
-    echo "   Usage: ${0}   generate-merged-product-ids | migrate-products | upload-images | create-led-brands"
+    echo "   Usage: ${0}   generate-merged-product-ids | migrate-products | upload-images | create-led-brands | migrate-product-tier-prices"
     echo ""
     ;;
 esac
